Android: Fixed layout bugs in Equalizer Preset and Equalizer Preset Details layouts. Added list selector for all white background lists. Replaced bitmaps for checkmark and action bar save.
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -444,6 +444,9 @@
     <AndroidResource Include="Resources\Anim\flipper_slide_out.xml" />
     <AndroidResource Include="Resources\Anim\flipper_back_slide_in.xml" />
     <AndroidResource Include="Resources\Anim\flipper_back_slide_out.xml" />
+    <AndroidResource Include="Resources\drawable\list_selector.xml" />
+    <AndroidResource Include="Resources\color\list_text.xml" />
+    <AndroidResource Include="Resources\color\list_secondarytext.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\armeabi\" />
