--- a/MPfm/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.csproj
@@ -230,5 +230,6 @@
     <Compile Include="Presenters\Interfaces\ISyncDownloadPresenter.cs" />
     <Compile Include="Presenters\SyncDownloadPresenter.cs" />
     <Compile Include="Messages\PlayerPlaylistUpdatedMessage.cs" />
+    <Compile Include="Views\IDesktopPreferencesView.cs" />
   </ItemGroup>
 </Project>
