Linux: Updated project after changes on other platforms.
Related to issue #382.

--- a/MPfm/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/MPfm.GTK/MPfm.GTK.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Classes\Main.cs" />
     <Compile Include="Windows\SyncWindow.cs" />
     <Compile Include="gtk-gui\MPfm.GTK.SyncWindow.cs" />
+    <Compile Include="Classes\LinuxSyncDeviceSpecifications.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
