Linux: Added SyncMenu window with basic implementation.
Related to issue #382.

--- a/MPfm/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/MPfm.GTK/MPfm.GTK.csproj
@@ -101,6 +101,8 @@
     <Compile Include="Windows\SyncWindow.cs" />
     <Compile Include="gtk-gui\MPfm.GTK.SyncWindow.cs" />
     <Compile Include="Classes\LinuxSyncDeviceSpecifications.cs" />
+    <Compile Include="Windows\SyncMenuWindow.cs" />
+    <Compile Include="gtk-gui\MPfm.GTK.SyncMenuWindow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
