--- a/MPfm/MPfm.Windows/MPfm.Windows.csproj
+++ b/MPfm/MPfm.Windows/MPfm.Windows.csproj
@@ -92,6 +92,24 @@
     <Compile Include="Classes\Forms\BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Classes\Forms\frmSync.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Forms\frmSync.Designer.cs">
+      <DependentUpon>frmSync.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Forms\frmSyncDownload.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Forms\frmSyncDownload.Designer.cs">
+      <DependentUpon>frmSyncDownload.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Forms\frmSyncMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Forms\frmSyncMenu.Designer.cs">
+      <DependentUpon>frmSyncMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Specifications\WindowsSyncDeviceSpecifications.cs" />
     <Compile Include="Classes\Misc\DriverComboBoxItem.cs" />
     <Compile Include="Classes\Navigation\WindowsNavigationManager.cs" />
@@ -174,11 +192,11 @@
     <Compile Include="Classes\Forms\frmPlaylist.Designer.cs">
       <DependentUpon>frmPlaylist.cs</DependentUpon>
     </Compile>
-    <Compile Include="Classes\Forms\frmSettings.cs">
+    <Compile Include="Classes\Forms\frmPreferences.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Classes\Forms\frmSettings.Designer.cs">
-      <DependentUpon>frmSettings.cs</DependentUpon>
+    <Compile Include="Classes\Forms\frmPreferences.Designer.cs">
+      <DependentUpon>frmPreferences.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Forms\frmSplash.cs">
       <SubType>Form</SubType>
@@ -190,6 +208,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Classes\Forms\frmFirstRun.resx">
       <DependentUpon>frmFirstRun.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\Forms\frmSync.resx">
+      <DependentUpon>frmSync.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\Forms\frmSyncDownload.resx">
+      <DependentUpon>frmSyncDownload.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\Forms\frmSyncMenu.resx">
+      <DependentUpon>frmSyncMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\Forms\frmUpdateLibraryStatus.resx">
       <SubType>Designer</SubType>
@@ -230,9 +257,9 @@
       <SubType>Designer</SubType>
       <DependentUpon>frmPlaylist.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Classes\Forms\frmSettings.resx">
+    <EmbeddedResource Include="Classes\Forms\frmPreferences.resx">
       <SubType>Designer</SubType>
-      <DependentUpon>frmSettings.cs</DependentUpon>
+      <DependentUpon>frmPreferences.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\Forms\frmSplash.resx">
       <SubType>Designer</SubType>
