Windows: Fixed bugs in Sync and SyncMenu implementations. Added list view to SyncMenu to see which files are selected. Added several flat black/white icons for tree views, list views and buttons.
Related to issue #422.

--- a/MPfm/MPfm.Windows/MPfm.Windows.csproj
+++ b/MPfm/MPfm.Windows/MPfm.Windows.csproj
@@ -289,6 +289,19 @@
     <Content Include="Classes\Configuration\ExampleConfig.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Resources\icon_android_16.png" />
+    <Content Include="Resources\icon_button_cancel_16.png" />
+    <Content Include="Resources\icon_button_connect_16.png" />
+    <Content Include="Resources\icon_button_download_16.png" />
+    <Content Include="Resources\icon_button_refresh_16.png" />
+    <Content Include="Resources\icon_linux_16.png" />
+    <Content Include="Resources\icon_osx_16.png" />
+    <Content Include="Resources\icon_phone_16.png" />
+    <Content Include="Resources\icon_song_16.png" />
+    <Content Include="Resources\icon_tablet_16.png" />
+    <Content Include="Resources\icon_user_16.png" />
+    <Content Include="Resources\icon_vinyl_16.png" />
+    <Content Include="Resources\icon_windows_16.png" />
     <None Include="Lib\bass.dll" />
     <None Include="Lib\bassenc.dll" />
     <None Include="Lib\bassflac.dll" />
