Mac: Implemented SyncDownload view; the whole sync process now works on Mac! There are a lot of stats missing though, and canceling doesn't work yet. Added Retina/non-Retina icons for Sync and SyncMenu list views. More layout bug fixes. Fixed alert view title/message.
Related to issue #381.

--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -420,5 +420,21 @@
     <BundleResource Include="Resources\icon_button_download%402x.png" />
     <BundleResource Include="Resources\icon_button_refresh.png" />
     <BundleResource Include="Resources\icon_button_refresh%402x.png" />
+    <BundleResource Include="Resources\icon_linux.png" />
+    <BundleResource Include="Resources\icon_linux%402x.png" />
+    <BundleResource Include="Resources\icon_osx.png" />
+    <BundleResource Include="Resources\icon_osx%402x.png" />
+    <BundleResource Include="Resources\icon_phone.png" />
+    <BundleResource Include="Resources\icon_phone%402x.png" />
+    <BundleResource Include="Resources\icon_tablet.png" />
+    <BundleResource Include="Resources\icon_tablet%402x.png" />
+    <BundleResource Include="Resources\icon_user.png" />
+    <BundleResource Include="Resources\icon_user%402x.png" />
+    <BundleResource Include="Resources\icon_vinyl.png" />
+    <BundleResource Include="Resources\icon_vinyl%402x.png" />
+    <BundleResource Include="Resources\icon_windows.png" />
+    <BundleResource Include="Resources\icon_windows%402x.png" />
+    <BundleResource Include="Resources\icon_android.png" />
+    <BundleResource Include="Resources\icon_android%402x.png" />
   </ItemGroup>
 </Project>
