Mac: Tree expand now works properly in SyncMenu. Added implementation for detecting free space on Mac. Fixed bugs in SyncMenuPresenter; added a different SelectItems method for mobile/desktop devices.
Related to issue #381.

--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -436,5 +436,7 @@
     <BundleResource Include="Resources\icon_windows%402x.png" />
     <BundleResource Include="Resources\icon_android.png" />
     <BundleResource Include="Resources\icon_android%402x.png" />
+    <BundleResource Include="Resources\icon_song.png" />
+    <BundleResource Include="Resources\icon_song%402x.png" />
   </ItemGroup>
 </Project>
