Mac: Added IDesktopEffectsView, which combines IEqualizerPresetsView and IEqualizerPresetDetailsView. Added PlaylistWindow and EffectsWindow to NavigationManager; they can now be opened through the MainPresenter. EffectsWindow now implements IDesktopEffectsView (but the implementation is empty for now). Updated the look of Effects window with newer theme.
Related to issue #381.

--- a/MPfm/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.csproj
@@ -231,5 +231,6 @@
     <Compile Include="Presenters\SyncDownloadPresenter.cs" />
     <Compile Include="Messages\PlayerPlaylistUpdatedMessage.cs" />
     <Compile Include="Views\IDesktopPreferencesView.cs" />
+    <Compile Include="Views\IDesktopEffectsView.cs" />
   </ItemGroup>
 </Project>
