--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -438,5 +438,17 @@
     <BundleResource Include="Resources\icon_android%402x.png" />
     <BundleResource Include="Resources\icon_song.png" />
     <BundleResource Include="Resources\icon_song%402x.png" />
+    <BundleResource Include="Resources\icon_artists.png" />
+    <BundleResource Include="Resources\icon_artists%402x.png" />
+    <BundleResource Include="Resources\icon_button_add.png" />
+    <BundleResource Include="Resources\icon_button_add%402x.png" />
+    <BundleResource Include="Resources\icon_button_delete.png" />
+    <BundleResource Include="Resources\icon_button_delete%402x.png" />
+    <BundleResource Include="Resources\icon_button_save.png" />
+    <BundleResource Include="Resources\icon_button_save%402x.png" />
+    <BundleResource Include="Resources\icon_button_reset%402x.png" />
+    <BundleResource Include="Resources\icon_button_reset.png" />
+    <BundleResource Include="Resources\icon_button_speaker.png" />
+    <BundleResource Include="Resources\icon_button_speaker%402x.png" />
   </ItemGroup>
 </Project>
