Linux: Added and implemented SyncDownloadWindow successfully. The Sync process is now complete on Linux! Fixed bug where the items needed to be expanded twice in Library Browser. Effects and Playlist windows can now be opened through MainPresenter.
Related to issue #382.

--- a/MPfm/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/MPfm.GTK/MPfm.GTK.csproj
@@ -126,6 +126,8 @@
     <Compile Include="gtk-gui\MPfm.GTK.SyncMenuWindow.cs" />
     <Compile Include="Classes\Helpers\SystemDrawingHelper.cs" />
     <Compile Include="Classes\Helpers\ResourceHelper.cs" />
+    <Compile Include="Windows\SyncDownloadWindow.cs" />
+    <Compile Include="gtk-gui\MPfm.GTK.SyncDownloadWindow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
