Windows: Library Browser is now working except for contextual menu. Song Browser is now refreshed correctly and a song can be started by double clicking on an item. The song info and album art now load correctly. Removed a lot of buttons in the main toolbar. Fixed a bug in SQLiteGateway.Select where a crash would happen when trying to load an enum.
Related to issue #422.

--- a/MPfm/MPfm.Windows/MPfm.Windows.csproj
+++ b/MPfm/MPfm.Windows/MPfm.Windows.csproj
@@ -290,10 +290,14 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Resources\icon_android_16.png" />
+    <None Include="Resources\icon_button_add_16.png" />
     <Content Include="Resources\icon_button_cancel_16.png" />
     <Content Include="Resources\icon_button_connect_16.png" />
+    <None Include="Resources\icon_button_delete_16.png" />
     <Content Include="Resources\icon_button_download_16.png" />
     <Content Include="Resources\icon_button_refresh_16.png" />
+    <None Include="Resources\icon_button_speaker_16.png" />
+    <None Include="Resources\icon_button_reset_16.png" />
     <Content Include="Resources\icon_linux_16.png" />
     <Content Include="Resources\icon_osx_16.png" />
     <Content Include="Resources\icon_phone_16.png" />
