--- a/MPfm/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -229,6 +229,10 @@
       <Project>{2A62D229-D7FC-41DA-B676-BB1371659BFB}</Project>
       <Name>MPfm.Library</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MPfm.MVP\MPfm.MVP.csproj">
+      <Project>{B6B0613C-FF39-479D-9EF0-31DAF9684A06}</Project>
+      <Name>MPfm.MVP</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MPfm.Player\MPfm.Player.csproj">
       <Project>{FEB7497C-784C-4380-874F-46FD93C82BA1}</Project>
       <Name>MPfm.Player</Name>
