Windows: Implemented Effects view.
Related to issue #422.

--- a/MPfm/MPfm.Windows/MPfm.Windows.csproj
+++ b/MPfm/MPfm.Windows/MPfm.Windows.csproj
@@ -298,6 +298,7 @@
     <Content Include="Resources\icon_button_refresh_16.png" />
     <None Include="Resources\icon_button_speaker_16.png" />
     <None Include="Resources\icon_button_reset_16.png" />
+    <None Include="Resources\icon_button_save_16.png" />
     <Content Include="Resources\icon_linux_16.png" />
     <Content Include="Resources\icon_osx_16.png" />
     <Content Include="Resources\icon_phone_16.png" />
