--- a/MPfm/MPfm.Windows/MPfm.Windows.csproj
+++ b/MPfm/MPfm.Windows/MPfm.Windows.csproj
@@ -291,6 +291,7 @@
     </Content>
     <Content Include="Resources\icon_android_16.png" />
     <None Include="Resources\icon_button_add_16.png" />
+    <None Include="Resources\icon_artists_16.png" />
     <Content Include="Resources\icon_button_cancel_16.png" />
     <Content Include="Resources\icon_button_connect_16.png" />
     <None Include="Resources\icon_button_delete_16.png" />
