Mac: Updated button icons with new margin (the images were a bit too large), added retina icons for Loops/Marker toolbar.
Related to issue #381.

--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -450,5 +450,13 @@
     <BundleResource Include="Resources\icon_button_reset.png" />
     <BundleResource Include="Resources\icon_button_speaker.png" />
     <BundleResource Include="Resources\icon_button_speaker%402x.png" />
+    <BundleResource Include="Resources\icon_button_edit.png" />
+    <BundleResource Include="Resources\icon_button_edit%402x.png" />
+    <BundleResource Include="Resources\icon_button_stop.png" />
+    <BundleResource Include="Resources\icon_button_stop%402x.png" />
+    <BundleResource Include="Resources\icon_button_play.png" />
+    <BundleResource Include="Resources\icon_button_play%402x.png" />
+    <BundleResource Include="Resources\icon_button_goto%402x.png" />
+    <BundleResource Include="Resources\icon_button_goto.png" />
   </ItemGroup>
 </Project>
