--- a/MPfm/MPfm.Windows/MPfm.Windows.csproj
+++ b/MPfm/MPfm.Windows/MPfm.Windows.csproj
@@ -296,10 +296,14 @@
     <Content Include="Resources\icon_button_connect_16.png" />
     <None Include="Resources\icon_button_delete_16.png" />
     <Content Include="Resources\icon_button_download_16.png" />
+    <None Include="Resources\icon_button_edit_16.png" />
+    <None Include="Resources\icon_button_goto_16.png" />
+    <None Include="Resources\icon_button_play_16.png" />
     <Content Include="Resources\icon_button_refresh_16.png" />
     <None Include="Resources\icon_button_speaker_16.png" />
     <None Include="Resources\icon_button_reset_16.png" />
     <None Include="Resources\icon_button_save_16.png" />
+    <None Include="Resources\icon_button_stop_16.png" />
     <Content Include="Resources\icon_linux_16.png" />
     <Content Include="Resources\icon_osx_16.png" />
     <Content Include="Resources\icon_phone_16.png" />
