Added IDesktopFirstRunView, IMobileFirstRunView and IEditSongMetadataView (and their presenters). They are empty for now. Edit Song Metadata can now be opened on Windows. The Song Browser contextual menu is now working again on Windows.
Related to issue #422.

--- a/MPfm/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.csproj
@@ -112,6 +112,12 @@
     <Compile Include="Messages\MobileLibraryBrowserItemClickedMessage.cs" />
     <Compile Include="Navigation\MobileNavigationManager.cs" />
     <Compile Include="Presenters\AudioPreferencesPresenter.cs" />
+    <Compile Include="Presenters\MobileFirstRunPresenter.cs" />
+    <Compile Include="Presenters\DesktopFirstRunPresenter.cs" />
+    <Compile Include="Presenters\EditSongMetadataPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IMobileFirstRunPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IDesktopFirstRunPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IEditSongMetadataPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IMobileOptionsMenuPresenter.cs" />
     <Compile Include="Presenters\MobileOptionsMenuPresenter.cs" />
     <Compile Include="Presenters\MobileLibraryBrowserPresenter.cs" />
@@ -121,6 +127,9 @@
     <Compile Include="Presenters\Interfaces\IAudioPreferencesPresenter.cs" />
     <Compile Include="Presenters\UpdateLibraryPresenter.cs" />
     <Compile Include="Models\PlayerPositionEntity.cs" />
+    <Compile Include="Views\IMobileFirstRunView.cs" />
+    <Compile Include="Views\IDesktopFirstRunView.cs" />
+    <Compile Include="Views\IEditSongMetadataView.cs" />
     <Compile Include="Views\IMobileOptionsMenuView.cs" />
     <Compile Include="Views\IMobileLibraryBrowserView.cs" />
     <Compile Include="Views\ILibraryPreferencesView.cs" />
