Mac: Main window: Changed completely how Time Shifting/Pitch Shifting/Information/Actions panels are managed. They are now part of a mini tab panel which is similar to the mobile UX. Much, much better than trying to present tons of controls in a crawled space.
Related to issue #382.

--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -214,6 +214,7 @@
       <DependentUpon>SyncDownloadWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Objects\SyncMenuItem.cs" />
+    <Compile Include="Classes\Controls\MPfmTabButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\LibraryBrowser.xib" />
