--- a/MPfm/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -85,6 +85,9 @@
       <DependentUpon>WaveFormDisplay.cs</DependentUpon>
     </Compile>
     <Compile Include="Buttons-Toolbars\ButtonTheme.cs" />
+    <Compile Include="Buttons-Toolbars\TabButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Buttons-Toolbars\TrackBarTheme.cs" />
     <Compile Include="Buttons-Toolbars\TrackBar.cs">
       <SubType>Component</SubType>
