Android: Fixed bugs in reporting player position (the player was not checking for use of floating point). RequestPosition in lock screen and player activities is no longer called when changing seek bar position without user input. Fixed bugs in lock screen. Added Close bitmap for notification. Notificaton bar: Close button is now aligned top right; close now closes all activities using BaseActivity. Updated text view padding in Player/LockScreen layouts to space text of different sizes correctly.
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -473,6 +473,14 @@
     <AndroidResource Include="Resources\color\list_secondarytext.xml" />
     <AndroidResource Include="Resources\drawable\button_selector.xml" />
     <AndroidResource Include="Resources\Values\StringArray.xml" />
+    <AndroidResource Include="Resources\drawable-hdpi\player_close.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\player_close_on.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\player_close.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\player_close_on.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\player_close.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\player_close_on.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\player_close.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\player_close_on.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\armeabi\" />
